--- a/Go To Jail/Base.lproj/Main.storyboard
+++ b/Go To Jail/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3zo-SW-l5v">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Dear Citizens -->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,11 +17,144 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eO1-O2-mYD">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <items/>
+                                <variation key="widthClass=compact" ambiguous="YES" misplaced="YES">
+                                    <rect key="frame" x="343" y="548" width="400" height="44"/>
+                                </variation>
+                            </toolbar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NBn-P2-9sl">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Mph-tW-r1T"/>
+                                    <constraint firstAttribute="width" constant="400" id="vQ1-sR-vKR"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem title="Hmm...Try it" id="5lH-5y-Iuk">
+                                        <connections>
+                                            <action selector="startUpdationLocation:" destination="vXZ-lx-hvc" id="uGB-Ku-gio"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="kXh-iC-CkX"/>
+                                    <barButtonItem title="What ? No" id="KwO-3q-MjU">
+                                        <connections>
+                                            <action selector="startUpdationLocation:" destination="vXZ-lx-hvc" id="ZOm-zS-uf5"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="Mph-tW-r1T"/>
+                                        <exclude reference="vQ1-sR-vKR"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="Mph-tW-r1T"/>
+                                        <include reference="vQ1-sR-vKR"/>
+                                    </mask>
+                                </variation>
+                            </toolbar>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="NSA Would like to locate you" translatesAutoresizingMaskIntoConstraints="NO" id="lp6-gp-Q6R">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="484" id="A5C-7G-RQq"/>
+                                    <constraint firstAttribute="width" constant="320" id="FMr-0C-P6w"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="A5C-7G-RQq"/>
+                                        <exclude reference="FMr-0C-P6w"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="A5C-7G-RQq"/>
+                                        <include reference="FMr-0C-P6w"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="y7w-64-6JX"/>
+                                </connections>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="NBn-P2-9sl" secondAttribute="trailing" constant="-16" id="2s8-X3-hhM"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="NBn-P2-9sl" secondAttribute="bottom" id="9QP-Tn-vuw"/>
+                            <constraint firstItem="lp6-gp-Q6R" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-8" id="PGq-oU-GFR"/>
+                            <constraint firstItem="eO1-O2-mYD" firstAttribute="top" secondItem="lp6-gp-Q6R" secondAttribute="bottom" id="Tar-ip-Rew"/>
+                            <constraint firstItem="lp6-gp-Q6R" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="URX-zp-Rzm"/>
+                            <constraint firstItem="NBn-P2-9sl" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="Yvm-Xa-KfC"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="lp6-gp-Q6R" secondAttribute="trailing" constant="-16" id="gRi-BD-ljz"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="lp6-gp-Q6R" secondAttribute="trailing" constant="-16" id="xs1-y6-iWR"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="eO1-O2-mYD"/>
+                                <exclude reference="NBn-P2-9sl"/>
+                                <exclude reference="lp6-gp-Q6R"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="9QP-Tn-vuw"/>
+                                <exclude reference="2s8-X3-hhM"/>
+                                <exclude reference="Yvm-Xa-KfC"/>
+                                <exclude reference="Tar-ip-Rew"/>
+                                <exclude reference="PGq-oU-GFR"/>
+                                <exclude reference="URX-zp-Rzm"/>
+                                <exclude reference="gRi-BD-ljz"/>
+                                <exclude reference="xs1-y6-iWR"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="eO1-O2-mYD"/>
+                                <include reference="NBn-P2-9sl"/>
+                                <include reference="lp6-gp-Q6R"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="9QP-Tn-vuw"/>
+                                <include reference="2s8-X3-hhM"/>
+                                <include reference="Yvm-Xa-KfC"/>
+                                <include reference="Tar-ip-Rew"/>
+                                <include reference="PGq-oU-GFR"/>
+                                <include reference="URX-zp-Rzm"/>
+                                <include reference="gRi-BD-ljz"/>
+                                <include reference="xs1-y6-iWR"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <navigationItem key="navigationItem" title="Dear Citizens " id="er0-gV-Vsn"/>
+                    <connections>
+                        <outlet property="myTextView" destination="lp6-gp-Q6R" id="8Na-jJ-FNG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1375.5" y="376"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="syb-eL-kLg">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3zo-SW-l5v" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="zz6-SB-RaV">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="dtQ-i9-5ff"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6JC-wj-Bci" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="505.5" y="1037"/>
         </scene>
     </scenes>
 </document>
